samples/_failures_safe/1761699765_e33c4a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e015b77e.c:187: error: expected ‘;’, ‘,’ or ‘)’ at end of input
